--- a/BookNGo/Views/Home/Details.cshtml
+++ b/BookNGo/Views/Home/Details.cshtml
@@ -4,73 +4,38 @@
     ViewBag.Title = "Details House";
 }
 
-<h2>Details House</h2>
+<<h2>House Details</h2>
+<hr />
 
 <div>
-    <h4>House</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Address)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Address)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.MaxOccupancy)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.MaxOccupancy)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PricePerNight)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PricePerNight)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Category)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Category.CategoryName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Location)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Location.LocationName)
-        </dd>
-    </dl>
+    <img src="@Url.Content("/" + Model.Images.First().ImageUrl)" style="background-size: cover; height: 230px; width: 350px;" />
 </div>
+
+<table class="table table-striped table-hover">
+    <tr>
+        <th>@Html.DisplayNameFor(model => model.Title)</th>
+        <th>@Html.DisplayNameFor(model => model.Description)</th>
+        <th>@Html.DisplayNameFor(model => model.Address)</th>
+        <th>@Html.DisplayNameFor(model => model.MaxOccupancy)</th>
+        <th>@Html.DisplayNameFor(model => model.PricePerNight)
+        <th>@Html.DisplayNameFor(model => model.Category)</th>
+        <th>@Html.DisplayNameFor(model => model.Location)</th>
+    </tr>
+    <tr style="font-size: 115%; padding-top: 15px;">
+        <td>@Html.DisplayFor(model => model.Title)</td>
+        <td>@Html.DisplayFor(model => model.Description)</td>
+        <td>@Html.DisplayFor(model => model.Address)</td>
+        <td>@Html.DisplayFor(model => model.MaxOccupancy)</td>
+        <td>@Html.DisplayFor(model => model.PricePerNight)
+        <td>@Html.DisplayFor(model => model.Category.CategoryName)</td>
+        <td>@Html.DisplayFor(model => model.Location.LocationName)</td>
+    </tr>
+</table>
+
 <p>
     @if (User.Identity.IsAuthenticated)
     {
-        @Html.ActionLink("Book It", "BookIt", "Reservations", new { houseId = Model.HouseId }, null)
+        @Html.ActionLink("Book It", "BookIt", "Reservations", new { houseId = Model.HouseId }, new { @class = "btn btn-primary btn-sm" })
     }
-    |@Html.ActionLink("Back to Home", "Index", "Home")
+    |@Html.ActionLink("Back to Home", "Index", "Home", new { @class = "btn btn-info btn-sm" })
 </p>
