--- a/BookNGo/Views/Home/Index.cshtml
+++ b/BookNGo/Views/Home/Index.cshtml
@@ -40,7 +40,7 @@
 }
 
 @{
-    
+
 }
 
 <!-- Present the houses in cards -->
@@ -48,24 +48,24 @@
 {
     <!-- 1st Member Card -->
     <div class="col-md-4">
-        <div class="card hovercard">
+        <div class="card hovercard" style="background-color: powderblue; height: 400px">
             <!-- Bind HouseId with ImageId -->
             <div>
-                <img src="@Url.Content("/" + item.Images.First().ImageUrl)" style="background-size: cover; height: 135px;" />
+                <img src="@Url.Content("/" + item.Images.First().ImageUrl)" style="background-size: cover; height: 230px; width: 350px;" />
             </div>
             <div class="info">
                 <div class="title">
-                    <button class="btn btn-info btn-sm text-center text-capitalize">
+                    <button class="btn btn-info bnt-sm text-center text-capitalize" style="border-radius: 40px; font-size: 25px;">
                         @Html.ActionLink(item.Title, "Details", new { id = item.HouseId })
                     </button>
                 </div>
-                <div class="desc" style="font-size: large;">@Html.DisplayFor(modelItem => item.Location.LocationName)</div>
-                <div class="desc" style="font-size: large;">@Html.DisplayFor(modelItem => item.PricePerNight)</div>
+                <div class="desc" style="font-size: 25px;">@Html.DisplayFor(modelItem => item.Location.LocationName)</div>
+                <div class="desc" style="font-size: 20px;">@Html.DisplayFor(modelItem => item.PricePerNight)</div>
             </div>
             @if (User.Identity.IsAuthenticated)
             {
                 <div class="bottom">
-                    <button class="btn btn-lg" style="background-color: rgb(239, 239, 19);">
+                    <button style="background-color: rgb(0, 169, 255); border-radius: 40px; font-size: 25px;">
                         @Html.ActionLink("Book It", "BookIt", "Reservations", new { houseId = item.HouseId }, null)
                     </button>
                 </div>
@@ -74,7 +74,7 @@
     </div>
 }
 
-    
+
 @*<!-- Present the houses in cards -->
     <div class="container">
         <div class="row">
