--- a/BookNGo/Views/Manage/ChangePassword.cshtml
+++ b/BookNGo/Views/Manage/ChangePassword.cshtml
@@ -1,40 +1,45 @@
 ﻿@model BookNGo.Models.ChangePasswordViewModel
+
 @{
-    ViewBag.Title = "Change Password";
+    ViewBag.Title = "Change your password";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 
 @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Change Password Form</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
-        @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label magnify-label-100" })
         <div class="col-md-10">
             @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label magnify-label-100" })
         <div class="col-md-10">
             @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label magnify-label-100" })
         <div class="col-md-10">
             @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Change password" class="btn btn-default" />
+            <input type="submit" value="Change password" class="btn btn-primary btn-sm" />
         </div>
     </div>
 }
+
+    <div>
+        @Html.ActionLink("Back", "Details", "Users", null, new { @class = "btn btn-info btn-sm" })
+    </div>
+
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
