--- a/BookNGo/Views/Users/Delete.cshtml
+++ b/BookNGo/Views/Users/Delete.cshtml
@@ -1,88 +1,45 @@
 ﻿@model BookNGo.Models.ApplicationUser
 
-@{
+@*@{
     ViewBag.Title = "Delete Account";
-}
+}*@
 
 <h2>Delete Account</h2>
+<hr />
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>@User.Identity.Name</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.FirstName)
-        </dt>
+<h4>Do you wish to delete your account?</h4>
 
-        <dd>
-            @Html.DisplayFor(model => model.FirstName)
-        </dd>
+<br />
 
-        <dt>
-            @Html.DisplayNameFor(model => model.LastName)
-        </dt>
+<table class="table table-striped table-hover">
+    <tr>
+        <th>@Html.DisplayNameFor(model => model.UserName)</th>
+        <th>@Html.DisplayNameFor(model => model.FirstName)</th>
+        <th>@Html.DisplayNameFor(model => model.LastName)</th>
+        <th>@Html.DisplayNameFor(model => model.Email)</th>
+        <th>@Html.DisplayNameFor(model => model.Gender)
+        <th>@Html.DisplayNameFor(model => model.DateOfBirth)</th>
+        <th>@Html.DisplayNameFor(model => model.CreatedAt)</th>
+        @*<th>@Html.DisplayNameFor(model => model.PhoneNumber)</th>*@
+    </tr>
+    <tr style="font-size: 115%; padding-top: 15px;">
+        <td>@Html.DisplayFor(model => model.UserName)</td>
+        <td>@Html.DisplayFor(model => model.FirstName)</td>
+        <td>@Html.DisplayFor(model => model.LastName)</td>
+        <td>@Html.DisplayFor(model => model.Email)</td>
+        <td>@Html.DisplayFor(model => model.Gender)
+        <td>@Html.DisplayFor(model => model.DateOfBirth)</td>
+        <td>@Html.DisplayFor(model => model.CreatedAt)</td>
+        @*<td>@Html.DisplayFor(model => model.PhoneNumber)</td>*@
+    </tr>
+</table>
 
-        <dd>
-            @Html.DisplayFor(model => model.LastName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Gender)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Gender)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.DateOfBirth)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DateOfBirth)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CreatedAt)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CreatedAt)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PhoneNumber)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PhoneNumber)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.UserName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UserName)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
+@using (Html.BeginForm())
+{
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to Profile", "Details")
-        </div>
-    }
-</div>
+    <div class="form-actions no-color">
+        @Html.ActionLink("Back", "Details", "Users", null, new { @class = "btn btn-info btn-sm" })
+        <input type="submit" value="Delete" class="btn btn-danger btn-sm" />
+    </div>
+}
