--- a/BookNGo/Views/Users/Details.cshtml
+++ b/BookNGo/Views/Users/Details.cshtml
@@ -1,83 +1,38 @@
 ﻿@model BookNGo.Models.ApplicationUser
 
-@{
+@*@{
     ViewBag.Title = "Profile";
-}
+}*@
 
-<h2>Profile</h2>
+<h2>User Profile</h2>
+
+<hr />
+
+<table class="table table-striped table-hover">
+    <tr>
+        <th>@Html.DisplayNameFor(model => model.UserName)</th>
+        <th>@Html.DisplayNameFor(model => model.FirstName)</th>
+        <th>@Html.DisplayNameFor(model => model.LastName)</th>
+        <th>@Html.DisplayNameFor(model => model.Email)</th>
+        <th>@Html.DisplayNameFor(model => model.Gender)
+        <th>@Html.DisplayNameFor(model => model.DateOfBirth)</th>
+        <th>@Html.DisplayNameFor(model => model.CreatedAt)</th>
+        @*<th>@Html.DisplayNameFor(model => model.PhoneNumber)</th>*@
+    </tr>
+    <tr style="font-size: 115%; padding-top: 15px;">
+        <td >@Html.DisplayFor(model => model.UserName)</td>
+        <td>@Html.DisplayFor(model => model.FirstName)</td>
+        <td>@Html.DisplayFor(model => model.LastName)</td>
+        <td>@Html.DisplayFor(model => model.Email)</td>
+        <td>@Html.DisplayFor(model => model.Gender)
+        <td>@Html.DisplayFor(model => model.DateOfBirth)</td>
+        <td>@Html.DisplayFor(model => model.CreatedAt)</td>
+        @*<td>@Html.DisplayFor(model => model.PhoneNumber)</td>*@
+    </tr>
+</table>
 
 <div>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.UserName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UserName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.FirstName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.FirstName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.LastName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.LastName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Gender)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Gender)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.DateOfBirth)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DateOfBirth)
-        </dd>
-
-        @*<dt>
-            @Html.DisplayNameFor(model => model.PhoneNumber)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PhoneNumber)
-        </dd>*@
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CreatedAt)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CreatedAt)
-        </dd>
-
-    </dl>
+    @Html.ActionLink("Edit Account", "Edit", new { id = Model.Id }, new { @class = "btn btn-primary btn-sm" })
+    @Html.ActionLink("Change your password", "ChangePassword", "Manage", new { id = Model.Id }, new { @class = "btn btn-warning btn-sm" })
+    @Html.ActionLink("Delete Account", "Delete", new { id = Model.Id }, new { @class = "btn btn-danger btn-sm" })
 </div>
-<p>
-
-    @Html.ActionLink("Edit Account", "Edit", new { id = Model.Id }, new { @class = "btn btn-success " })
-    @Html.ActionLink("Delete Account", "Delete", new { id = Model.Id }, new { @class = "btn btn-danger" })
-    @Html.ActionLink("Change your password", "ChangePassword", "Manage", new { id = Model.Id }, new { @class = "btn btn-warning" })
-</p>
