--- a/BookNGo/Views/Users/Edit.cshtml
+++ b/BookNGo/Views/Users/Edit.cshtml
@@ -4,21 +4,21 @@
     ViewBag.Title = "Edit Profile";
 }
 
-<h2>Edit Profile</h2>
-
+<h2>Edit your profile</h2>
+<hr />
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>@User.Identity.Name</h4>
-    <hr />
+    @*<h4>@User.Identity.Name</h4>*@
+    @*<hr />*@
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.Id)
 
     <div class="form-group">
-        @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2 magnify-label-sm" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
@@ -26,7 +26,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-2 magnify-label-sm" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
@@ -34,17 +34,17 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(m => m.Gender, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.Gender, new { @class = "col-md-2 control-label magnify-label-sm" })
         <div class="col-md-10">
             @Html.DropDownList("gender", new SelectList(new List<SelectListItem>() {
                 new SelectListItem(){Text="Male", Value="Male"},
                 new SelectListItem(){Text="Female", Value="Female"}
-                }, "Value", "Text", "..Select.."))
+            }, "Value", "Text", "..Select.."), new { @class= "btn btn-default-bg-white btn-sm" })
         </div>
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.PhoneNumber, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.PhoneNumber, htmlAttributes: new { @class = "control-label col-md-2 magnify-label-sm" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
@@ -52,7 +52,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Location, "Location", htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.Location, "Location", htmlAttributes: new { @class = "control-label col-md-2 magnify-label-sm" })
         <div class="col-md-10">
             @Html.DropDownList("LocationId", null, htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.Location, "", new { @class = "text-danger" })
@@ -61,14 +61,14 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Save" class="btn btn-default" />
+            <input type="submit" value="Save" class="btn btn-success" />
         </div>
     </div>
 </div>
 }
 
 <div>
-    @Html.ActionLink("Back to Profile", "Details")
+    @Html.ActionLink("Back", "Details", null, new { @class="btn btn-info btn-sm"})
 </div>
 
 @section Scripts {
