--- a/BookNGo/Views/Users/Index.cshtml
+++ b/BookNGo/Views/Users/Index.cshtml
@@ -1,12 +1,12 @@
 ﻿@model IEnumerable<BookNGo.Models.ApplicationUser>
 
-@{
+@*@{
     ViewBag.Title = "Index";
-}
+}*@
 
-<h2>Index</h2>
+<h2>Users</h2>
 
-<table class="table">
+<table class="table table-striped table-hover">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.UserName)
@@ -39,43 +39,45 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.UserName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.FirstName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LastName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Gender)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DateOfBirth)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PhoneNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CreatedAt)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Location.LocationName)
-        </td>
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td style="font-size: 115%; padding-top: 15px;">
+                @Html.DisplayFor(modelItem => item.UserName)
+            </td>
+            <td style="font-size: 115%; padding-top: 15px;">
+                @Html.DisplayFor(modelItem => item.FirstName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LastName)
+            </td>
+            <td style="font-size: 115%; padding-top: 15px;">
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td style="font-size: 115%; padding-top: 15px;">
+                @Html.DisplayFor(modelItem => item.Gender)
+            </td>
+            <td style="font-size: 115%; padding-top: 15px;">
+                @Html.DisplayFor(modelItem => item.DateOfBirth)
+            </td>
+            <td style="font-size: 115%; padding-top: 15px;">
+                @Html.DisplayFor(modelItem => item.PhoneNumber)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CreatedAt)
+            </td>
+            <td style="font-size: 115%; padding-top: 15px;">
+                @Html.DisplayFor(modelItem => item.Location.LocationName)
+            </td>
 
 
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-        </td>
-    </tr>
-}
+            <td>
+                @Html.ActionLink("Edit User", "Edit", new { id = item.Id }, new { @class = "btn btn-primary btn-sm" })
+                @Html.ActionLink("User Details", "Details", new { id = item.Id }, new { @class = "btn btn-warning btn-sm" })
+                @Html.ActionLink("Delete User", "Delete", new { id = item.Id }, new { @class = "btn btn-danger btn-sm" })
+            </td>
+        </tr>
+    }
 
 </table>
+<div>@Html.ActionLink("Back", "Index", null, new { @class = "btn btn-info btn-sm" })</div>
