Changed About us page

--- a/BookNGo/Views/Home/About.cshtml
+++ b/BookNGo/Views/Home/About.cshtml
@@ -1,18 +1,20 @@
 ﻿@{
-    ViewBag.Title = "Our Gang of 4";
+    ViewBag.Title = "Who are we?";
 }
 <h2>@ViewBag.Title</h2>
+<br />
+
 @*<h3>@ViewBag.Message</h3>*@
 
 <!------ Include the above in your HEAD tag ---------->
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+
 <div class="container">
     <div class="row">
         <!-- 1st Member Card -->
         <div class="col-lg-3 col-sm-6">
             <div class="card hovercard">
-                <div class="cardheader">
-                </div>
+                <div class="cardheader"></div>
                 <div class="avatar">
                     <img src="~/Image/George.jpg" />
                 </div>
@@ -21,45 +23,52 @@
                         <h3 style="color: darkblue;">George Karanikolas</h3>
                     </div>
                     <div class="desc">Passionate about software</div>
-                    <div class="desc">Junior Web Developer</div>
-                    <div class="desc"></div>
+                    <div class="desc">Junior Developer</div>
+                    <div class="desc">Leader</div>
                 </div>
                 <div class="bottom">
-                    <a class="btn-cards btn-primary btn-twitter btn-sm" href="https://twitter.com/webmaniac"><i class="fa fa-twitter"></i></a>
-                    <a class="btn-cards btn-danger btn-sm" rel="publisher" href="https://plus.google.com/+ahmshahnuralam"><i class="fa fa-google-plus"></i></a>
-                    <a class="btn-cards btn-primary btn-sm" rel="publisher" href="https://plus.google.com/shahnuralam"><i class="fa fa-facebook"></i></a>
+                    <a href="https://www.linkedin.com/in/seijind/">
+                        <span class="fa-stack fa-lg">
+                            <i class="fa fa-square-o fa-stack-2x"></i>
+                            <i class="fa fa-linkedin fa-stack-1x"></i>
+                        </span>
+                    </a>
+                    <a href="https://github.com/SeijinD">
+                        <span class="fa-stack fa-lg">
+                            <i class="fa fa-square-o fa-stack-2x"></i>
+                            <i class="fa fa-github fa-stack-1x"></i>
+                        </span>
+                    </a>
                 </div>
             </div>
         </div>
         <!-- 2nd Card Member -->
         <div class="col-lg-3 col-sm-6">
             <div class="card hovercard">
-                <div class="cardheader">
-                </div>
+                <div class="cardheader"></div>
                 <div class="avatar">
                     <img src="~/Image/Maria.jpg" />
                 </div>
                 <div class="info">
                     <div class="title">
-                        <a href="https://scripteden.com/">Maria Kritou</a>
+                        <h3 style="color: darkblue;">Maria Kritou</h3>
                     </div>
-                    <div class="desc">Junior Web Developer</div>
-                    <div class="desc">Team Leader</div>
+                    <div class="desc">Passionate about software</div>
+                    <div class="desc">Junior Developer</div>
+                    <div class="desc">Member</div>
                 </div>
                 <div class="bottom">
-                    <a class="btn-cards btn-primary btn-twitter btn-sm .btn-cards" href="https://twitter.com/webmaniac">
-                        <i class="fa fa-twitter"></i>
+                    <a href="https://www.linkedin.com/in/maria-kritou/">
+                        <span class="fa-stack fa-lg">
+                            <i class="fa fa-square-o fa-stack-2x"></i>
+                            <i class="fa fa-linkedin fa-stack-1x"></i>
+                        </span>
                     </a>
-                    <a class="btn-cards btn-danger btn-sm" rel="publisher"
-                       href="https://plus.google.com/+ahmshahnuralam">
-                        <i class="fa fa-google-plus"></i>
-                    </a>
-                    <a class="btn-cards btn-primary btn-sm" rel="publisher"
-                       href="https://plus.google.com/shahnuralam">
-                        <i class="fa fa-facebook"></i>
-                    </a>
-                    <a class="btn-cards btn-warning btn-sm" rel="publisher" href="https://plus.google.com/shahnuralam">
-                        <i class="fa fa-behance"></i>
+                    <a href="https://github.com/MariaKritou">
+                        <span class="fa-stack fa-lg">
+                            <i class="fa fa-square-o fa-stack-2x"></i>
+                            <i class="fa fa-github fa-stack-1x"></i>
+                        </span>
                     </a>
                 </div>
             </div>
@@ -74,26 +83,24 @@
                 </div>
                 <div class="info">
                     <div class="title">
-                        <a target="_blank" href="https://scripteden.com/">Script Eden</a>
+                        <h3 style="color: darkblue;">Kostas Petsinas</h3>
                     </div>
-                    <div class="desc">Passionate designer</div>
-                    <div class="desc">Curious developer</div>
-                    <div class="desc">Tech geek</div>
+                    <div class="desc">Passionate about software</div>
+                    <div class="desc">Junior Developer</div>
+                    <div class="desc">Member</div>
                 </div>
                 <div class="bottom">
-                    <a class="btn-cards btn-primary btn-twitter btn-sm" href="https://twitter.com/webmaniac">
-                        <i class="fa fa-twitter"></i>
+                    <a href="https://www.linkedin.com/in/kostas-petsinas/">
+                        <span class="fa-stack fa-lg">
+                            <i class="fa fa-square-o fa-stack-2x"></i>
+                            <i class="fa fa-linkedin fa-stack-1x"></i>
+                        </span>
                     </a>
-                    <a class="btn-cards btn-danger btn-sm" rel="publisher"
-                       href="https://plus.google.com/+ahmshahnuralam">
-                        <i class="fa fa-google-plus"></i>
-                    </a>
-                    <a class="btn-cards btn-primary btn-sm" rel="publisher"
-                       href="https://plus.google.com/shahnuralam">
-                        <i class="fa fa-facebook"></i>
-                    </a>
-                    <a class="btn-cards btn-warning btn-sm" rel="publisher" href="https://plus.google.com/shahnuralam">
-                        <i class="fa fa-behance"></i>
+                    <a href="https://github.com/HikakuGR">
+                        <span class="fa-stack fa-lg">
+                            <i class="fa fa-square-o fa-stack-2x"></i>
+                            <i class="fa fa-github fa-stack-1x"></i>
+                        </span>
                     </a>
                 </div>
             </div>
@@ -104,30 +111,28 @@
                 <div class="cardheader">
                 </div>
                 <div class="avatar">
-                    <img src="~/Image/Meletis.jpg" alt="The Master" />
+                    <img src="~/Image/Meletis.jpg" />
                 </div>
                 <div class="info">
                     <div class="title">
-                        <a target="_blank" href="https://scripteden.com/">Script Eden</a>
+                        <h3 style="color: darkblue; font-size: 103%;">Meletis Papadopoulos</h3>
                     </div>
-                    <div class="desc">Passionate designer</div>
-                    <div class="desc">Curious developer</div>
-                    <div class="desc">Tech geek</div>
+                    <div class="desc">Passionate about software</div>
+                    <div class="desc">Junior Developer</div>
+                    <div class="desc">Member</div>
                 </div>
                 <div class="bottom">
-                    <a class="btn-cards btn-primary btn-twitter btn-sm" href="https://twitter.com/webmaniac">
-                        <i class="fa fa-twitter"></i>
+                    <a href="https://www.linkedin.com/in/meletis-papadopoulos/">
+                        <span class="fa-stack fa-lg">
+                            <i class="fa fa-square-o fa-stack-2x"></i>
+                            <i class="fa fa-linkedin fa-stack-1x"></i>
+                        </span>
                     </a>
-                    <a class="btn-cards btn-danger btn-sm" rel="publisher"
-                       href="https://plus.google.com/+ahmshahnuralam">
-                        <i class="fa fa-google-plus"></i>
-                    </a>
-                    <a class="btn-cards btn-primary btn-sm" rel="publisher"
-                       href="https://plus.google.com/shahnuralam">
-                        <i class="fa fa-facebook"></i>
-                    </a>
-                    <a class="btn-cards btn-warning btn-sm" rel="publisher" href="https://plus.google.com/shahnuralam">
-                        <i class="fa fa-behance"></i>
+                    <a href="https://github.com/meletiop">
+                        <span class="fa-stack fa-lg">
+                            <i class="fa fa-square-o fa-stack-2x"></i>
+                            <i class="fa fa-github fa-stack-1x"></i>
+                        </span>
                     </a>
                 </div>
             </div>
