--- a/BookNGo/Content/Site.css
+++ b/BookNGo/Content/Site.css
@@ -327,3 +327,22 @@ ul.nav > li > a:hover {
     background-color: white;
     border-color: #cccccc;
 }
+
+/* Footer */
+
+footer {
+    padding: 0;
+    margin: 0;
+}
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    background-color: #042a36;
+    color: #fff;
+    text-align: center;
+}
