--- a/BookNGo/Views/Shared/_Layout.cshtml
+++ b/BookNGo/Views/Shared/_Layout.cshtml
@@ -51,10 +51,16 @@
 
     <div class="container body-content">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - BookNGo</p>
+        @<hr />@
+        <!-- Footer -->
+        <footer class="footer">
+            <div class="container-fluid">
+                &copy; @DateTime.Now.Year - BookNGo
+            </div>
         </footer>
+        @<footer>
+            <p>&copy; @DateTime.Now.Year - BookNGo</p>
+        </footer>@
     </div>
 
     @Scripts.Render("~/bundles/jquery")
