--- a/BookNGo/Views/Home/About.cshtml
+++ b/BookNGo/Views/Home/About.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewBag.Title = "Who are we?";
+    ViewBag.Title = "Our Gang";
 }
+
 <h2>@ViewBag.Title</h2>
-<br />
 
 @*<h3>@ViewBag.Message</h3>*@
 
