--- a/BookNGo/Views/Home/Index.cshtml
+++ b/BookNGo/Views/Home/Index.cshtml
@@ -7,53 +7,48 @@
 @using (Html.BeginForm("Index", "Home", FormMethod.Get))
 {
     <form>
-        <h2>Search It!</h2>
+        <h2>Search for houses</h2>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.Label("startDate", "Arrival:")
+            @Html.Label("startDate", "Arrival:", new { @class="magnify-label-100"})
             @Html.TextBox("startDate", "", new { @class = "form-control", type = "date" })
             @Html.ValidationMessage("startDate", "", new { @class = "text-danger" })
         </div>
         <div class="form-group">
-            @Html.Label("endDate", "Departure:")
+            @Html.Label("endDate", "Departure:", new { @class = "magnify-label-100" })
             @Html.TextBox("endDate", "", new { @class = "form-control", type = "date" })
             @Html.ValidationMessage("endDate", "", new { @class = "text-danger" })
         </div>
         <div class="form-group">
-            @Html.Label("location", "Location:")
+            @Html.Label("location", "Location:", new { @class = "magnify-label-100" })
             @Html.DropDownList("location", (SelectList)ViewBag.Location, "Select your location", htmlAttributes: new { @class = "form-control" })
         </div>
         <div class="form-group">
-            @Html.Label("category", "Category:")
+            @Html.Label("category", "Category:", new { @class = "magnify-label-100" })
             @Html.DropDownList("category", (SelectList)ViewBag.Category, "Select a category", htmlAttributes: new { @class = "form-control" })
         </div>
         <div class="form-group">
-            @Html.Label("occupancy", "Visitors:")
+            @Html.Label("occupancy", "Visitors:", new { @class = "magnify-label-100" })
             @Html.TextBox("occupancy", "", new { @class = "form-control", placeholder = "Number of visitors" })
         </div>
         <div class="form-group">
-            <input type="submit" value="Search" class="btn btn-primary" />
+            <input type="submit" value="Search" class="btn btn-primary btn-sm" />
         </div>
     </form>
-
 }
 
-<!-- Present the houses in cards -->
 @foreach (var item in Model)
 {
-    <!-- 1st Member Card -->
     <div class="col-md-4">
-        <div class="card hovercard" style="background-color: powderblue; height: 400px">
+        <div class="card hovercard" style="background-color: black;">
             <!-- Bind HouseId with ImageId -->
             <div>
                 <img src="@Url.Content("/" + item.Images.First().ImageUrl)" style="background-size: cover; height: 230px; width: 350px;" />
             </div>
             <div class="info">
                 <div class="title">
-                    <button class="btn btn-info bnt-sm text-center text-capitalize" style="border-radius: 40px; font-size: 25px;">
-                        @Html.ActionLink(item.Title, "Details", new { id = item.HouseId })
-                    </button>
+                    @*@Html.ActionLink(item.Title, "Details", new { id = item.HouseId }, new { @class="btn btn-primary btn-sm"})*@
                 </div>
                 <div class="desc" style="font-size: 25px;">@Html.DisplayFor(modelItem => item.Location.LocationName)</div>
                 <div class="desc" style="font-size: 20px;">@Html.DisplayFor(modelItem => item.PricePerNight)</div>
@@ -61,118 +56,41 @@
             @if (User.Identity.IsAuthenticated)
             {
                 <div class="bottom">
-                    <button style="background-color: rgb(0, 169, 255); border-radius: 40px; font-size: 25px;">
-                        @Html.ActionLink("Book It", "BookIt", "Reservations", new { houseId = item.HouseId }, null)
-                    </button>
+                    @Html.ActionLink(item.Title, "Details", new { id = item.HouseId }, new { @class = "btn btn-primary btn-sm" })
+                    @Html.ActionLink("Book It", "BookIt", "Reservations", new { houseId = item.HouseId }, new { @class = "btn btn-warning btn-sm" })
                 </div>
             }
         </div>
     </div>
 }
 
-
-@*<!-- Present the houses in cards -->
-    <div class="container">
-        <div class="row">
-            <!-- 1st Member Card -->
-            <div class="col-lg-3 col-sm-6">
-                <div class="card hovercard">
-                    <div class="cardheader">
-                    </div>
-                    <div class="avatar">
-                        <img src="~/Image/George.jpg" />
-                    </div>
-                    <div class="info">
-                        <div class="title">
-                            <a target="_blank" href="https://scripteden.com/">Script Eden</a>
-                        </div>
-                        <div class="desc">Passionate designer</div>
-                        <div class="desc">Curious developer</div>
-                        <div class="desc">Tech geek</div>
-                    </div>
-                    <div class="bottom">
-                        <a class="btn btn-cards btn-primary btn-twitter btn-sm" href="https://twitter.com/webmaniac">
-                            <i class="fa fa-twitter"></i>
-                        </a>
-                        <a class="btn-cards btn-danger btn-sm" rel="publisher"
-                           href="https://plus.google.com/+ahmshahnuralam">
-                            <i class="fa fa-google-plus"></i>
-                        </a>
-                        <a class="btn-cards btn-primary btn-sm" rel="publisher"
-                           href="https://plus.google.com/shahnuralam">
-                            <i class="fa fa-facebook"></i>
-                        </a>
-                        <a class="btn-cards btn-warning btn-sm" rel="publisher" href="https://plus.google.com/shahnuralam">
-                            <i class="fa fa-behance"></i>
-                        </a>
-                    </div>
+@*@foreach (var item in Model)
+    {
+        <!-- Add class with col-md-4 -->
+        <!-- Remove the div class -->
+        <div class="col-md-4">
+            <div class="card hovercard" style="background-color: powderblue; height: 400px">
+                <!-- Bind HouseId with ImageId -->
+                <div>
+                    <img src="@Url.Content("/" + item.Images.First().ImageUrl)" style="background-size: cover; height: 230px; width: 350px;" />
                 </div>
+                <div class="info">
+                    <div class="title">
+                        <button class="btn btn-info bnt-sm text-center text-capitalize" style="border-radius: 40px; font-size: 25px;">
+                            @Html.ActionLink(item.Title, "Details", new { id = item.HouseId })
+                        </button>
+                    </div>
+                    <div class="desc" style="font-size: 25px;">@Html.DisplayFor(modelItem => item.Location.LocationName)</div>
+                    <div class="desc" style="font-size: 20px;">@Html.DisplayFor(modelItem => item.PricePerNight)</div>
+                </div>
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <div class="bottom">
+                        <button style="background-color: rgb(0, 169, 255); border-radius: 40px; font-size: 25px;">
+                            @Html.ActionLink("Book It", "BookIt", "Reservations", new { houseId = item.HouseId }, null)
+                        </button>
+                    </div>
+                }
             </div>
         </div>
-    </div>*@
-
-
-
-
-@*<table class="table">
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Title)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Address)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MaxOccupancy)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PricePerNight)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Category)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Location)
-            </th>
-
-            <th></th>
-        </tr>
-
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Title)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Description)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Address)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.MaxOccupancy)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.PricePerNight)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Category.CategoryName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Location.LocationName)
-                </td>
-                <td>
-                    @if (User.Identity.IsAuthenticated)
-                    {
-                        @Html.ActionLink("Book It", "BookIt", "Reservations", new { houseId = item.HouseId }, null)
-                    }
-                    |@Html.ActionLink("Details", "Details", new { id = item.HouseId })
-                </td>
-            </tr>
-        }
-
-    </table>*@
+    }*@
