--- a/BookNGo/Views/Reservations/Details.cshtml
+++ b/BookNGo/Views/Reservations/Details.cshtml
@@ -28,5 +28,5 @@
 </table>
 
 <p>
-    @Html.ActionLink("Back", "Index", "Reservations", null, new { @class = "btn btn-info" })
+    @Html.ActionLink("Back", "Index", "Home", null, new { @class = "btn btn-info" })
 </p>
