--- a/BookNGo/Views/Reservations/Index.cshtml
+++ b/BookNGo/Views/Reservations/Index.cshtml
@@ -63,7 +63,7 @@
         </td>
         <td style="font-size: 115%; padding-top: 15px;">
             @Html.ActionLink("Details", "Details", new { id=item.ReservationId }, new {@class="btn btn-warning btn-sm" })
-            @Html.ActionLink("Delete", "Delete", new { id=item.ReservationId }, new { @class = "btn btn-danger btn-sm" }) 
+            @Html.ActionLink("Cancel", "Delete", new { id=item.ReservationId }, new { @class = "btn btn-danger btn-sm" }) 
         </td>
     </tr>
 }
