--- a/BookNGo/Views/Houses/Create.cshtml
+++ b/BookNGo/Views/Houses/Create.cshtml
@@ -4,7 +4,7 @@
         ViewBag.Title = "Create House";
     }*@
 
-<h2>New House</h2>
+<h2>Add House</h2>
 
 
 @using (Html.BeginForm("Create", "Houses", FormMethod.Post, new { enctype = "multipart/form-data" }))
@@ -78,7 +78,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-success" />
+                <input type="submit" value="Add" class="btn btn-success" />
             </div>
         </div>
 
@@ -86,7 +86,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back", "Index", null, new { @class = "btn btn-info btn-sm" })
+    @Html.ActionLink("Back", "MyHouses", "Houses", null, new { @class = "btn btn-info btn-sm" })
 </div>
 
 @section Scripts {
