--- a/BookNGo/Views/Houses/Delete.cshtml
+++ b/BookNGo/Views/Houses/Delete.cshtml
@@ -4,11 +4,11 @@
         ViewBag.Title = "Delete House";
 }*@
 
-<h2>Delete House</h2>
+<h2>Remove @Model.Title</h2>
 
 <hr />
 
-<h3>Do you want to delete this house?</h3>
+<h3>Do you want to remove this house?</h3>
 
 <table class="table table-striped table-hover">
     <tr>
@@ -35,8 +35,8 @@
         @Html.AntiForgeryToken()
 
     <div class="form-actions no-color">
-        <input type="submit" value="Delete" class="btn btn-danger btn-sm" />
-        @Html.ActionLink("Back", "Index", null, new { @class = "btn btn-info btn-sm" })
+        <input type="submit" value="Remove" class="btn btn-danger btn-sm" />
+        @Html.ActionLink("Back", "MyHouses", "Houses", null, new { @class = "btn btn-info btn-sm" })
     </div>
     }
 </div>
