--- a/BookNGo/Views/Houses/Edit.cshtml
+++ b/BookNGo/Views/Houses/Edit.cshtml
@@ -4,7 +4,7 @@
         ViewBag.Title = "Edit House";
     }*@
 
-<h2>Edit House</h2>
+<h2>Edit @Model.Title</h2>
 
 
 @using (Html.BeginForm())
@@ -75,14 +75,12 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-success" />
+                @Html.ActionLink("Back", "MyHouses", "Houses", null, new { @class = "btn btn-info btn-sm" })
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back", "Index", null, new { @class = "btn btn-info btn-sm" })
-</div>
+    
 
 
 @section Scripts {
