--- a/BookNGo/Views/Houses/Index.cshtml
+++ b/BookNGo/Views/Houses/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }*@
 
-<h2>My Houses</h2>
+<h2>All Houses</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create", null, new { @class="btn btn-info btn-sm"})
