--- a/BookNGo/Views/Houses/MyHouses.cshtml
+++ b/BookNGo/Views/Houses/MyHouses.cshtml
@@ -65,7 +65,7 @@
                 @Html.ActionLink("Book It!", "BookIt", "Reservations", new { houseId = item.HouseId }, new { @class = "btn btn-info btn-sm" })
                 @Html.ActionLink("Edit", "Edit", new { id = item.HouseId }, new { @class = "btn btn-primary btn-sm" })
                 @Html.ActionLink("Details", "Details", new { id = item.HouseId }, new { @class = "btn btn-warning btn-sm" })
-                @Html.ActionLink("Delete", "Delete", new { id = item.HouseId }, new { @class = "btn btn-danger btn-sm" })
+                @Html.ActionLink("Remove", "Delete", new { id = item.HouseId }, new { @class = "btn btn-danger btn-sm" })
             </td>
         </tr>
     }
