--- a/BookNGo/Views/Reservations/BookIt.cshtml
+++ b/BookNGo/Views/Reservations/BookIt.cshtml
@@ -43,7 +43,6 @@
         @*<div class="form-group">
                 @Html.LabelFor(model => model.PriceCharged, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-
                     @{
                         string priceShow = "";
                         if (Model.EndDate != null && Model.StartDate != null)
@@ -57,12 +56,7 @@
                         {
                             priceShow = "0";
                         }
-
-
-
-
                     }
-
                     @Html.Label(@priceShow, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.PriceCharged, "", new { @class = "text-danger" })
                 </div>
@@ -77,9 +71,7 @@
 }
 
 <div>
-    @*@Html.ActionLink("Back", "MyReservations", "Reservations", null, new { @class="btn btn-info btn-sm"})*@
-    @* Should probably redirect back to houses instead of reservations*@
-    @Html.ActionLink("Back", "MyHouses", "Houses", null, new { @class = "btn btn-info btn-sm" })
+    @Html.ActionLink("Back", "Index", "Home", null, new { @class = "btn btn-info btn-sm" })
 </div>
 
 @section Scripts {
