--- a/BookNGo/Views/Users/Details.cshtml
+++ b/BookNGo/Views/Users/Details.cshtml
@@ -1,12 +1,19 @@
 ﻿@model BookNGo.Models.ApplicationUser
 
 @*@{
-    ViewBag.Title = "Profile";
-}*@
+        ViewBag.Title = "Profile";
+    }*@
 
-<h2>User Profile</h2>
+<h2>@Model.FirstName @Model.LastName</h2>
 
 <hr />
+
+@if (Model.ImageUrl != null)
+{
+    <div>
+        <img src="@Url.Content("/" + Model.ImageUrl)" style="background-size: cover; height: 350px; width: 350px;" />
+    </div>
+}
 
 <table class="table table-striped table-hover">
     <tr>
@@ -20,7 +27,7 @@
         @*<th>@Html.DisplayNameFor(model => model.PhoneNumber)</th>*@
     </tr>
     <tr style="font-size: 115%; padding-top: 15px;">
-        <td >@Html.DisplayFor(model => model.UserName)</td>
+        <td>@Html.DisplayFor(model => model.UserName)</td>
         <td>@Html.DisplayFor(model => model.FirstName)</td>
         <td>@Html.DisplayFor(model => model.LastName)</td>
         <td>@Html.DisplayFor(model => model.Email)</td>
