--- a/BookNGo/Content/Site.css
+++ b/BookNGo/Content/Site.css
@@ -331,7 +331,6 @@ ul.nav > li > a:hover {
 }
 
 /* Footer */
-
 .footer {
     position: fixed;
     left: 0;
@@ -342,4 +341,49 @@ ul.nav > li > a:hover {
     background-color: #042a36;
     color: #fff;
     text-align: center;
+}
+/* Form */
+.vertical-center {
+    min-height: 100%;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    position: absolute;
+    width: 100%;
+    top: 0;
+}
+
+.myform {
+    color: black;
+    font-size: 100%;
+    border-radius: 15px 15px 15px 15px;
+    padding: 15px;
+    text-align: left;
+    background-color: rgba(237, 237, 237, 0.5);
+    background-color: hsla(0, 0%, 93%, 0.5);
+    width: 300px;
+}
+
+.myform2 {
+    position: absolute;
+    right: 0px;
+    font-size: 70px;
+    font-weight: bold;
+    color: #5dacc6;
+    border-radius: 15px 15px 15px 15px;
+    padding: 15px;
+    text-align: center;
+    background-color: rgba(237, 237, 237, 0.5);
+    background-color: hsla(0, 0%, 93%, 0.5);
+    min-height: 20%;
+    min-height: 20vh;
+    display: flex;
+    align-items: center;
+    top: 0px;
+}
+
+/* Carousel */
+#carousel-img {
+    height: 100vh;
+    width: 100%;
 }
