--- a/BookNGo/Views/Reservations/BookIt.cshtml
+++ b/BookNGo/Views/Reservations/BookIt.cshtml
@@ -40,27 +40,18 @@
             </div>
         </div>
 
-        @*<div class="form-group">
-                @Html.LabelFor(model => model.PriceCharged, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="form-group">
+                @Html.LabelFor(model => model.PriceCharged, htmlAttributes: new { @class = "control-label col-md-2 magnify-label-sm" })
                 <div class="col-md-10">
-                    @{
-                        string priceShow = "";
-                        if (Model.EndDate != null && Model.StartDate != null)
-                        {
-                            TimeSpan priceTimeSpan = Model.EndDate - Model.StartDate;
-                            int price = priceTimeSpan.Days;
-                            price = ViewBag.House.PricePerNight * price;
-                            priceShow = Convert.ToString(price);
-                        }
-                        else
-                        {
-                            priceShow = "0";
-                        }
+                    @{ 
+                        var price = ViewBag.House.PricePerNight;
+                        string priceShow = Convert.ToString(price);
+                        
                     }
                     @Html.Label(@priceShow, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.PriceCharged, "", new { @class = "text-danger" })
                 </div>
-            </div>*@
+        </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
