--- a/BookNGo/Views/Shared/_LayoutHome.cshtml
+++ b/BookNGo/Views/Shared/_LayoutHome.cshtml
@@ -49,8 +49,7 @@
         </div>
     </div>
 
-
-    <div class="container body-content">
+    <div class="container-fluid body-content" style="padding:0px; margin-top:-18px">
         @RenderBody()
 
     </div>
