--- a/BookNGo/Views/Houses/MyHouses.cshtml
+++ b/BookNGo/Views/Houses/MyHouses.cshtml
@@ -8,7 +8,10 @@
 
 <p>
     @Html.ActionLink("Add House", "Create", "House", new { @class = "btn btn-primary" })
-    @Html.ActionLink("Reservations", "MyHousesReservations", "Reservations", null, new { @class = "btn btn-success" })
+    @if (User.IsInRole("Admin, Owner"))
+    {
+        @Html.ActionLink("Reservations", "MyHousesReservations", "Reservations", null, new { @class = "btn btn-success" })
+    }
 </p>
 
 <table class="table table-striped table-hover">
